# prime-drive-django

./: .gitignore  README.md  build.sh  main.py  package-lock.json  package.json  pyproject.toml
config/: settings.py  urls.py
static/css/: tailwind.css
static/js/: contato.js  main.js  orcamento.js
static/src/: input.css
templates/: base.html
templates/website/: contato.html  inicio.html  nfc.html  orcamento.html  servicos.html  sobre.html  veiculo.html
website/: urls.py  views.py
