[project]
name = "prime-drive-django"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "dj-database-url>=3.1.2",
    "django>=6.0.5",
    "gunicorn>=26.0.0",
    "psycopg[binary]>=3.3.4",
    "whitenoise[brotli]>=6.12.0",
]
